# InSync

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml
.github/workflows/: ci.yml  release.yml
.kiro/specs/backend-refactor/: .config.kiro  design.md  requirements.md  tasks.md
.kiro/specs/sponsorblock-integration/: .config.kiro  design.md  requirements.md  (+1 more)
.kiro/steering/: product.md  structure.md  tech.md
backend/: README.md  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial.py
backend/app/: __init__.py  config.py  database.py  logging_config.py  main.py  state.py  version.py
backend/app/api/: __init__.py  admin.py  auth.py  config_client.py  dashboard.py  library.py  platforms.py  playlists.py  setup.py  sync.py
backend/app/core/: dependencies.py  scheduler.py  security.py
backend/app/models/: __init__.py  app_config.py  download_task.py  oauth_state.py  platform_link.py  synced_playlist.py  track.py  user.py
backend/app/services/: app_config.py  audio_trimmer.py  download.py  jellyfin.py  metadata.py  oauth_state.py  sponsorblock.py  sync_engine.py  webhooks.py
backend/tests/: test_admin_masking.py  test_api.py  test_app_config.py  test_dashboard.py  test_download.py  test_jellyfin.py  test_jwt_bootstrap.py  test_metadata.py  test_oauth.py  test_platforms.py  test_spa_base_url.py  test_sponsorblock.py  test_sponsorblock_properties.py  test_sync_engine.py  test_version.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
(+14 files in other folders)
